--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "save-dev": "^0.0.1-security",
+    "typescript": "^5.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,11 +43,15 @@
     ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.6.0",
+    "@eslint/js": "^9.10.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.3",
-    "globals": "^15.7.0",
-    "tailwindcss": "^3.4.4"
-  }
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.36.1",
+    "globals": "^15.9.0",
+    "prettier": "3.3.3",
+    "tailwindcss": "^3.4.4",
+    "typescript-eslint": "^8.6.0"
+  },
+  "format": "prettier --write ./src"
 }
